src/styles/modules/upgrade.scss
#upgrade-modal {
	height: 608px;
	width: 522px;
	border-radius: 4px;
	background-color: #fff;
}

#upgrade-modal.modal {
	min-height: 560px;
}

h1.upgrade--headline {
	font-family: 'Avenir Next';
	font-weight: 500;
	color: #394AB6;
	text-align: center;
	font-size: 24px;
	margin-top: 30px;
	margin-bottom: 0;
}

h3.upgrade--subhead {
	font-family: 'Avenir Next';
	font-weight: 500;
	font-size: 12px;
	color: #000;
	text-align: center;
	margin-top: 10px;
}

.upgrade--plan {
	height: 50px;
	width: 197px;
	margin: 8% auto 15px;
	font-size: 0;
}


.selected {
	border: 1px solid #394AB6; 
}

.upgrade--plan > button:not(.selected) {
	border: 1px solid #ccc; 	
}

.upgrade--plan > button.monthly {
	border-top-left-radius: 4px;
	border-bottom-left-radius: 4px;
	line-height: 2em;
	min-width: 92px;
	margin: 0;
	background-color: #fff;
	font-size: 14px;
}

.upgrade--plan > button.yearly {
	border-top-right-radius: 4px;
	border-bottom-right-radius: 4px;
	line-height: 2em;
	min-width: 92px;
	margin: 0;
	background-color: #fff;
	font-size: 14px;
}

button.yearly:after {
	content: 'SAVE $16';
	position: absolute;
	top: 100px;
	right: 30px;
	transform: rotate(30deg);
	color: #394AB6;
	font-size: 11px;
}

.upgrade--figure {
	background-image: url('../images/Professional-plan@2x.png');
	background-repeat: no-repeat;
	background-size: 95%;
	height: 230px;
	width: 280px;
	margin: 0 auto 40px;
	background-position: right;
}

.upgrade--button.waves-effect.waves-light.btn-large {
	height: 50px;
	width: 190px;
	margin: 0 auto;
	border-radius: 35px;
	background-color: #9CBD3B;
	display: block;
	text-transform: none;
	font-weight: 900;
	padding: 0;
	font-size: 14px;
}

@media #{$small-and-down} {
	#upgrade-modal {
		height: 400px;
		width: 300px;
		border-radius: 4px;
		background-color: #fff;
	}

	#upgrade-modal.modal {
		min-height: 460px;
	}

	.upgrade--figure {
		background-image: url('../images/Professional-plan@2x.png');
		background-repeat: no-repeat;
		background-size: 95%;
		height: 130px;
		width: 190px;
		margin: 0 auto 30px;
		background-position: right;
	}

	.upgrade--plan {
		margin-top: 10%;
	}


	.upgrade--plan > button.monthly {
		border-top-left-radius: 4px;
		border-bottom-left-radius: 4px;
		line-height: 2em;
		min-width: 92px;
		margin: 0;
	}

	.upgrade--plan > button.yearly {
		border-top-right-radius: 4px;
		border-bottom-right-radius: 4px;
		line-height: 2em;
		min-width: 92px;
		margin: 0;
	}

	button.yearly:after {
		text-align: center;
		content: 'SAVE $16';
		position: absolute;
		top: 117px;
		right: 45px;
		transform: rotate(30deg);
		color: #394AB6;
		font-size: 11px;
		font-weight: 600;
	}
	
}

@media #{$medium-and-up} { 
	.upgrade--figure {
		background-image: url('../images/Professional-plan@2x.png');
		background-repeat: no-repeat;
		background-size: 95%;
		height: 250px;
		width: 320px;
		margin: 0 auto 10px;	
	}

	button.yearly:after {
		text-align: center;
		content: 'SAVE $16';
		position: absolute;
		top: 130px;
		right: 155px;
		transform: rotate(30deg);
		color: #394AB6;
		font-size: 11px;
		font-weight: 600;
	}	
}

@media #{$large-and-up} {
	.upgrade--figure {
		background-image: url('../images/Professional-plan@2x.png');
		background-repeat: no-repeat;
		background-size: 95%;
		height: 250px;
		width: 320px;
		margin: 0 auto;	
	}
}

